Cleaned up kernel build makefiles.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20390 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -412,7 +412,7 @@ COPYING: $(COMPONENT_TARGETS)
 	@echo ""						>>$@
 	@echo "** Linux Kernel:"				>>$@
 	@echo ""						>>$@
-	@cat ../kernel/$(KERNEL_NAME)/COPYING			>>$@
+	@cat $(KERNEL_SRC)/COPYING				>>$@
 	@echo ""						>>$@
 	@echo "** Root File System:"				>>$@
 	@echo ""						>>$@
@@ -797,7 +797,7 @@ endif
 
 # Install kernel modules
 
-	cp -R -P -p ../kernel/modules/lib/modules		$@/lib
+	cp -R -P -p $(KERNEL_WORK)/modules/lib/modules		$@/lib
 	find $@/lib/modules -type d -name '*MuntsOS' -exec ln -s modules.dep.bb {}/modules.dep ";"
 
 # Install files to /root
