--- a/bootkernel/kernel/BeagleBone.config
+++ b/bootkernel/kernel/BeagleBone.config
@@ -126,7 +126,7 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="../../initramfs/initramfs.cpio.gz"
+CONFIG_INITRAMFS_SOURCE="../../../initramfs/initramfs.cpio.gz"
 CONFIG_INITRAMFS_ROOT_UID=0
 CONFIG_INITRAMFS_ROOT_GID=0
 CONFIG_RD_GZIP=y
