Do make mrproper only if the top level target is clean
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20394 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -130,7 +130,7 @@ allconfig:
 # Clean out working files
 
 clean:
-	-if [ -d $(KERNEL_SRC) ] ; then $(MAKE) -C $(KERNEL_SRC) mrproper ; fi
+	-if [ -d $(KERNEL_SRC) -a "$(MAKECMDGOALS)" = "clean" ] ; then $(MAKE) -C $(KERNEL_SRC) mrproper ; fi
 	$(MAKE) -C ../initramfs clean
 	rm -rf $(KERNEL_WORK)/config.done
 	rm -rf $(KERNEL_WORK)/dtbs.done
