/bin/bash: line 1: :q: command not found
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20401 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -115,15 +115,15 @@ build: $(KERNEL_WORK)/build.done
 # Refresh kernel configuration files
 
 allconfig:
-	$(MAKE) config.done reallyclean BOARDNAME=BeagleBone
-	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi1
-	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi1Gadget
-	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi2
-	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi2Gadget
-	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi3
-	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi3Gadget
-	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi4
-	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi4Gadget
+	$(MAKE) config reallyclean BOARDNAME=BeagleBone
+	$(MAKE) config reallyclean BOARDNAME=RaspberryPi1
+	$(MAKE) config reallyclean BOARDNAME=RaspberryPi1Gadget
+	$(MAKE) config reallyclean BOARDNAME=RaspberryPi2
+	$(MAKE) config reallyclean BOARDNAME=RaspberryPi2Gadget
+	$(MAKE) config reallyclean BOARDNAME=RaspberryPi3
+	$(MAKE) config reallyclean BOARDNAME=RaspberryPi3Gadget
+	$(MAKE) config reallyclean BOARDNAME=RaspberryPi4
+	$(MAKE) config reallyclean BOARDNAME=RaspberryPi4Gadget
 
 ###############################################################################
 
