--- a/bootkernel/kernel/RaspberryPi1.config
+++ b/bootkernel/kernel/RaspberryPi1.config
@@ -2956,9 +2956,7 @@ CONFIG_DMA_BCM2708=y
 # CONFIG_VIRT_DRIVERS is not set
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VDPA is not set
-CONFIG_VHOST_MENU=y
-# CONFIG_VHOST_NET is not set
-# CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
+# CONFIG_VHOST_MENU is not set
 
 #
 # Microsoft Hyper-V guest support
