Enabled more Videocore stuff
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20405 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi3.config
+++ b/bootkernel/kernel/RaspberryPi3.config
@@ -2051,6 +2051,11 @@ CONFIG_V4L2_ASYNC=m
 # Media controller options
 #
 # CONFIG_MEDIA_CONTROLLER_DVB is not set
+CONFIG_MEDIA_CONTROLLER_REQUEST_API=y
+
+#
+# Please notice that the enabled Media controller Request API is EXPERIMENTAL
+#
 # end of Media controller options
 
 #
@@ -3222,7 +3227,8 @@ CONFIG_STAGING=y
 # end of Resolver to digital converters
 # end of IIO staging drivers
 
-# CONFIG_STAGING_MEDIA is not set
+CONFIG_STAGING_MEDIA=y
+CONFIG_VIDEO_RPIVID=m
 
 #
 # Android
