--- a/bootkernel/kernel/RaspberryPi3Gadget.config
+++ b/bootkernel/kernel/RaspberryPi3Gadget.config
@@ -1891,6 +1891,11 @@ CONFIG_V4L2_ASYNC=m
 # Media controller options
 #
 # CONFIG_MEDIA_CONTROLLER_DVB is not set
+CONFIG_MEDIA_CONTROLLER_REQUEST_API=y
+
+#
+# Please notice that the enabled Media controller Request API is EXPERIMENTAL
+#
 # end of Media controller options
 
 #
@@ -2933,7 +2938,8 @@ CONFIG_STAGING=y
 # end of Resolver to digital converters
 # end of IIO staging drivers
 
-# CONFIG_STAGING_MEDIA is not set
+CONFIG_STAGING_MEDIA=y
+CONFIG_VIDEO_RPIVID=m
 
 #
 # Android
