Lots of library component updates:
libusb to 1.0.26.
hidapi to 0.12.0.
openssl to 1.1.1q.
libtirpc to 1.3.3.
libnl to 3.7.0.
mariadb-connector-c to 3.3.2.
libmodbus to 3.1.8.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20413 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -38,7 +38,7 @@ NCURSES_URL	= $(NCURSES_SERVER)/$(NCURSES_TARBALL)
 NCURSES_DIST	= $(TEMP)/$(NCURSES_TARBALL)
 
 LIBUSB_NAME	= libusb
-LIBUSB_VER	= 1.0.25
+LIBUSB_VER	= 1.0.26
 LIBUSB_SRC	= $(LIBUSB_NAME)-$(LIBUSB_VER)
 LIBUSB_TARBALL	= $(LIBUSB_NAME)-$(LIBUSB_VER).tar.bz2
 LIBUSB_SERVER	= https://github.com/libusb/libusb/releases/download/v$(LIBUSB_VER)
@@ -46,7 +46,7 @@ LIBUSB_URL	= $(LIBUSB_SERVER)/$(LIBUSB_TARBALL)
 LIBUSB_DIST	= $(TEMP)/$(LIBUSB_TARBALL)
 
 HIDAPI_NAME	= hidapi
-HIDAPI_VER	= 0.11.2
+HIDAPI_VER	= 0.12.0
 HIDAPI_SRC	= hidapi-$(HIDAPI_NAME)-$(HIDAPI_VER)
 HIDAPI_TARBALL	= $(HIDAPI_NAME)-$(HIDAPI_VER).tar.gz
 HIDAPI_SERVER	= https://github.com/libusb/hidapi/archive
@@ -54,7 +54,7 @@ HIDAPI_URL	= $(HIDAPI_SERVER)/$(HIDAPI_TARBALL)
 HIDAPI_DIST	= $(TEMP)/$(HIDAPI_TARBALL)
 
 OPENSSL_NAME	= openssl
-OPENSSL_VER	= 1.1.1n
+OPENSSL_VER	= 1.1.1q
 OPENSSL_SRC	= $(OPENSSL_NAME)-$(OPENSSL_VER)
 OPENSSL_TARBALL	= $(OPENSSL_SRC).tar.gz
 OPENSSL_SERVER	= http://www.openssl.org/source
@@ -79,7 +79,7 @@ CURL_URL	= $(CURL_SERVER)/$(CURL_TARBALL)
 CURL_DIST	= $(TEMP)/$(CURL_TARBALL)
 
 TIRPC_NAME	= libtirpc
-TIRPC_VER	= 1.3.2
+TIRPC_VER	= 1.3.3
 TIRPC_SRC	= libtirpc-$(TIRPC_VER)
 TIRPC_TARBALL	= libtirpc-$(TIRPC_VER).tar.bz2
 TIRPC_SERVER	= http://sourceforge.net/projects/libtirpc/files/libtirpc
@@ -104,10 +104,10 @@ LIBMNL_SRC	= libmnl.src
 LIBMNL_URL	= git://git.netfilter.org/libmnl
 
 LIBNL_NAME	= libnl
-LIBNL_VER	= 3.5.0
+LIBNL_VER	= 3.7.0
 LIBNL_SRC	= $(LIBNL_NAME)-$(LIBNL_VER)
 LIBNL_TARBALL	= $(LIBNL_SRC).tar.gz
-LIBNL_SERVER	= https://github.com/thom311/libnl/releases/download/libnl3_5_0
+LIBNL_SERVER	= https://github.com/thom311/libnl/releases/download/libnl3_7_0
 LIBNL_URL	= $(LIBNL_SERVER)/$(LIBNL_TARBALL)
 LIBNL_DIST	= $(TEMP)/$(LIBNL_TARBALL)
 
@@ -120,7 +120,7 @@ LIBSODIUM_URL	= $(LIBSODIUM_SERVER)/$(LIBSODIUM_TARBALL)
 LIBSODIUM_DIST	= $(TEMP)/$(LIBSODIUM_TARBALL)
 
 LIBMYSQLCLIENT_NAME	= mariadb-connector-c
-LIBMYSQLCLIENT_VER	= 3.2.6
+LIBMYSQLCLIENT_VER	= 3.3.2
 LIBMYSQLCLIENT_SRC	= $(LIBMYSQLCLIENT_NAME)-$(LIBMYSQLCLIENT_VER)-src
 LIBMYSQLCLIENT_TARBALL	= $(LIBMYSQLCLIENT_NAME)-$(LIBMYSQLCLIENT_VER)-src.tar.gz
 LIBMYSQLCLIENT_SERVER	= https://downloads.mariadb.com/Connectors/c/connector-c-$(LIBMYSQLCLIENT_VER)
@@ -160,10 +160,10 @@ ZEROMQ_URL	= $(ZEROMQ_SERVER)/$(ZEROMQ_TARBALL)
 ZEROMQ_DIST	= $(TEMP)/$(ZEROMQ_TARBALL)
 
 MODBUS_NAME	= libmodbus
-MODBUS_VER	= 3.1.7
+MODBUS_VER	= 3.1.8
 MODBUS_SRC	= libmodbus-$(MODBUS_VER)
 MODBUS_TARBALL	= libmodbus-$(MODBUS_VER).tar.gz
-MODBUS_SERVER	= https://libmodbus.org/releases
+MODBUS_SERVER	= https://github.com/stephane/libmodbus/releases/download/v$(MODBUS_VER)
 MODBUS_URL	= $(MODBUS_SERVER)/$(MODBUS_TARBALL)
 MODBUS_DIST	= $(TEMP)/$(MODBUS_TARBALL)
 
