Harmonized Raspberry Pi MMC/SD/SDIO configuration
Prefer SDHCI and sdhost


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20425 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi4Gadget.config
+++ b/bootkernel/kernel/RaspberryPi4Gadget.config
@@ -3085,7 +3085,7 @@ CONFIG_HID_MCP2221=y
 # USB HID support
 #
 CONFIG_USB_HID=y
-CONFIG_HID_PID=y
+# CONFIG_HID_PID is not set
 CONFIG_USB_HIDDEV=y
 # end of USB HID support
 
@@ -3372,9 +3372,7 @@ CONFIG_MMC_BLOCK_MINORS=32
 #
 # MMC/SD/SDIO Host Controller Drivers
 #
-CONFIG_MMC_BCM2835_MMC=y
-CONFIG_MMC_BCM2835_DMA=y
-CONFIG_MMC_BCM2835_PIO_DMA_BARRIER=2
+# CONFIG_MMC_BCM2835_MMC is not set
 CONFIG_MMC_BCM2835_SDHOST=y
 # CONFIG_MMC_DEBUG is not set
 # CONFIG_MMC_ARMMMCI is not set
