--- a/bootkernel/kernel/RaspberryPi3Gadget.config
+++ b/bootkernel/kernel/RaspberryPi3Gadget.config
@@ -2611,19 +2611,31 @@ CONFIG_MMC_BLOCK_MINORS=32
 #
 # MMC/SD/SDIO Host Controller Drivers
 #
-CONFIG_MMC_BCM2835_MMC=y
-# CONFIG_MMC_BCM2835_DMA is not set
-# CONFIG_MMC_BCM2835_SDHOST is not set
+# CONFIG_MMC_BCM2835_MMC is not set
+CONFIG_MMC_BCM2835_SDHOST=y
 # CONFIG_MMC_DEBUG is not set
 # CONFIG_MMC_ARMMMCI is not set
-# CONFIG_MMC_SDHCI is not set
+CONFIG_MMC_SDHCI=y
+CONFIG_MMC_SDHCI_IO_ACCESSORS=y
+CONFIG_MMC_SDHCI_PLTFM=y
+# CONFIG_MMC_SDHCI_OF_ARASAN is not set
+# CONFIG_MMC_SDHCI_OF_ASPEED is not set
+# CONFIG_MMC_SDHCI_OF_AT91 is not set
+# CONFIG_MMC_SDHCI_OF_DWCMSHC is not set
+# CONFIG_MMC_SDHCI_CADENCE is not set
+# CONFIG_MMC_SDHCI_F_SDH30 is not set
+# CONFIG_MMC_SDHCI_MILBEAUT is not set
+CONFIG_MMC_SDHCI_IPROC=y
 # CONFIG_MMC_SPI is not set
 # CONFIG_MMC_DW is not set
 # CONFIG_MMC_USDHI6ROL0 is not set
 # CONFIG_MMC_CQHCI is not set
 # CONFIG_MMC_HSQ is not set
-CONFIG_MMC_BCM2835=y
+# CONFIG_MMC_BCM2835 is not set
 # CONFIG_MMC_MTK is not set
+# CONFIG_MMC_SDHCI_XENON is not set
+# CONFIG_MMC_SDHCI_OMAP is not set
+# CONFIG_MMC_SDHCI_AM654 is not set
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
