Use dwc2 on all Raspberry Pi platforms.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20430 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi4Gadget.config
+++ b/bootkernel/kernel/RaspberryPi4Gadget.config
@@ -3139,7 +3139,7 @@ CONFIG_USB_XHCI_PLATFORM=y
 # CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
-CONFIG_USB_DWCOTG=y
+# CONFIG_USB_DWCOTG is not set
 # CONFIG_USB_HCD_BCMA is not set
 # CONFIG_USB_HCD_TEST_MODE is not set
 
@@ -3185,12 +3185,12 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_MUSB_HDRC is not set
 # CONFIG_USB_DWC3 is not set
 CONFIG_USB_DWC2=y
-CONFIG_USB_DWC2_HOST=y
+# CONFIG_USB_DWC2_HOST is not set
 
 #
 # Gadget/Dual-role mode requires USB Gadget support to be enabled
 #
-# CONFIG_USB_DWC2_PERIPHERAL is not set
+CONFIG_USB_DWC2_PERIPHERAL=y
 # CONFIG_USB_DWC2_DUAL_ROLE is not set
 # CONFIG_USB_DWC2_PCI is not set
 # CONFIG_USB_DWC2_DEBUG is not set
