--- a/bootkernel/kernel/RaspberryPi2.config
+++ b/bootkernel/kernel/RaspberryPi2.config
@@ -641,7 +641,7 @@ CONFIG_BLK_PM=y
 #
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
-CONFIG_IOSCHED_BFQ=y
+# CONFIG_IOSCHED_BFQ is not set
 # end of IO Schedulers
 
 CONFIG_ASN1=y
@@ -1113,6 +1113,7 @@ CONFIG_BCM2835_SMI=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 # CONFIG_XILINX_SDFEC is not set
+# CONFIG_HISI_HIKEY_USB is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -2650,7 +2651,7 @@ CONFIG_USB_AUTOSUSPEND_DELAY=2
 # CONFIG_USB_OHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
-CONFIG_USB_DWCOTG=y
+# CONFIG_USB_DWCOTG is not set
 # CONFIG_USB_HCD_TEST_MODE is not set
 
 #
@@ -2694,7 +2695,14 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_CDNS_SUPPORT is not set
 # CONFIG_USB_MUSB_HDRC is not set
 # CONFIG_USB_DWC3 is not set
-# CONFIG_USB_DWC2 is not set
+CONFIG_USB_DWC2=y
+CONFIG_USB_DWC2_HOST=y
+
+#
+# Gadget/Dual-role mode requires USB Gadget support to be enabled
+#
+# CONFIG_USB_DWC2_DEBUG is not set
+# CONFIG_USB_DWC2_TRACK_MISSED_SOFS is not set
 # CONFIG_USB_ISP1760 is not set
 
 #
@@ -2797,7 +2805,7 @@ CONFIG_NOP_USB_XCEIV=y
 
 # CONFIG_USB_GADGET is not set
 # CONFIG_TYPEC is not set
-# CONFIG_USB_ROLE_SWITCH is not set
+CONFIG_USB_ROLE_SWITCH=y
 CONFIG_MMC=y
 CONFIG_PWRSEQ_EMMC=y
 CONFIG_PWRSEQ_SIMPLE=y
@@ -3827,6 +3835,7 @@ CONFIG_RESET_CONTROLLER=y
 # CONFIG_PHY_CPCAP_USB is not set
 # CONFIG_PHY_MAPPHONE_MDM6600 is not set
 # CONFIG_PHY_OCELOT_SERDES is not set
+# CONFIG_PHY_SAMSUNG_USB2 is not set
 # end of PHY Subsystem
 
 # CONFIG_POWERCAP is not set
