--- a/bootkernel/kernel/RaspberryPi2Gadget.config
+++ b/bootkernel/kernel/RaspberryPi2Gadget.config
@@ -641,7 +641,7 @@ CONFIG_BLK_PM=y
 #
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
-CONFIG_IOSCHED_BFQ=y
+# CONFIG_IOSCHED_BFQ is not set
 # end of IO Schedulers
 
 CONFIG_ASN1=y
