Added upgradeconfig target.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20431 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile
+++ b/toolchain/crosstool/Makefile
@@ -60,6 +60,12 @@ menuconfig:
 	cp .config $(BOARDBASE).config
 	touch config.done
 
+upgradeconfig:
+	cp $(BOARDBASE).config .config
+	$(CTNG) upgradeconfig
+	cp .config $(BOARDBASE).config
+	touch config.done
+	
 ################################################################################
 
 # Download source distributions
