Added download_prebuilt target.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20436 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/dma/Makefile
+++ b/extensions/dma/Makefile
@@ -61,11 +61,21 @@ $(PKGDIR): compile.done
 
 package.deb: $(PKGFILE)
 
+# Download prebuilt package
+
+download_prebuilt: $(PKGFILE).downloaded
+
+$(PKGFILE).downloaded:
+	wget -q -nc $(DOWNLOADPREFIX)/extensions/$(PKGFILE)
+	touch $(PKGFILE).downloaded
+
 # Remove working files
 
 clean:
-	rm -rf *.done dma $(PKGDIR) *.deb
+	rm -rf *.done dma $(PKGDIR)
+	if [ ! -f $(PKGFILE).downloaded ]; then rm -rf $(PKGFILE) ; fi
 
 reallyclean: clean
+	rm -rf *.done $(PKGFILE) $(PKGFILE).downloaded
 
 distclean: reallyclean
