Updated for Crosstoo-NG release 1.25.0.
Previously used release candidate 1.25.0_rc1.2_6cd1663.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20452 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/BeagleBone.config
+++ b/toolchain/crosstool/BeagleBone.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# crosstool-NG 1.25.0_rc1.2_6cd1663 Configuration
+# crosstool-NG 1.25.0 Configuration
 #
 CT_CONFIGURE_has_static_link=y
 CT_CONFIGURE_has_cxx11=y
@@ -27,7 +27,7 @@ CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_VERSION="1.25.0_rc1.2_6cd1663"
+CT_VERSION="1.25.0"
 CT_VCHECK=""
 CT_CONFIG_VERSION_ENV="4"
 CT_CONFIG_VERSION_CURRENT="4"
@@ -474,8 +474,12 @@ CT_GLIBC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GLIBC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GLIBC_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
 CT_GLIBC_SIGNATURE_FORMAT="packed/.sig"
+CT_GLIBC_later_than_2_34=y
+CT_GLIBC_2_34_or_later=y
 CT_GLIBC_later_than_2_32=y
 CT_GLIBC_2_32_or_later=y
+CT_GLIBC_later_than_2_31=y
+CT_GLIBC_2_31_or_later=y
 CT_GLIBC_later_than_2_30=y
 CT_GLIBC_2_30_or_later=y
 CT_GLIBC_later_than_2_29=y
@@ -977,8 +981,8 @@ CT_ZLIB_PATCH_GLOBAL=y
 # CT_ZLIB_PATCH_LOCAL_BUNDLED is not set
 # CT_ZLIB_PATCH_NONE is not set
 CT_ZLIB_PATCH_ORDER="global"
-CT_ZLIB_V_1_2_11=y
-CT_ZLIB_VERSION="1.2.11"
+CT_ZLIB_V_1_2_12=y
+CT_ZLIB_VERSION="1.2.12"
 CT_ZLIB_MIRRORS="http://downloads.sourceforge.net/project/libpng/zlib/${CT_ZLIB_VERSION} https://www.zlib.net/"
 CT_ZLIB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ZLIB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
