--- a/bootkernel/kernel/RaspberryPi2.config
+++ b/bootkernel/kernel/RaspberryPi2.config
@@ -1413,10 +1413,14 @@ CONFIG_RT2X00_LIB_CRYPTO=y
 CONFIG_RT2X00_LIB_LEDS=y
 # CONFIG_RT2X00_DEBUG is not set
 CONFIG_WLAN_VENDOR_REALTEK=y
-CONFIG_RTL8187=m
-# CONFIG_RTL_CARDS is not set
-CONFIG_RTL8XXXU=m
-CONFIG_RTL8XXXU_UNTESTED=y
+# CONFIG_RTL8187 is not set
+CONFIG_RTL_CARDS=m
+CONFIG_RTL8192CU=m
+CONFIG_RTLWIFI=m
+CONFIG_RTLWIFI_USB=m
+# CONFIG_RTLWIFI_DEBUG is not set
+CONFIG_RTL8192C_COMMON=m
+# CONFIG_RTL8XXXU is not set
 # CONFIG_RTW88 is not set
 # CONFIG_WLAN_VENDOR_RSI is not set
 # CONFIG_WLAN_VENDOR_ST is not set
