Added upload target
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20464 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/xmlrpc-client/Makefile
+++ b/extensions/xmlrpc-client/Makefile
@@ -55,6 +55,11 @@ $(PKGDIR):
 
 package.deb: $(PKGFILE)
 
+# Upload package to repository
+
+upload: $(PKGFILE)
+	scp $^ $(REPOSITORY)
+
 # Download prebuilt package
 
 download_prebuilt: $(PKGFILE).downloaded
