--- a/extensions/dma/Makefile
+++ b/extensions/dma/Makefile
@@ -61,6 +61,11 @@ $(PKGDIR): compile.done
 
 package.deb: $(PKGFILE)
 
+# Upload package to repository
+
+upload: $(PKGFILE)
+	scp $^ $(REPOSITORY)
+
 # Download prebuilt package
 
 download_prebuilt: $(PKGFILE).downloaded
