--- a/extensions/gconv/Makefile
+++ b/extensions/gconv/Makefile
@@ -49,6 +49,11 @@ $(PKGDIR):
 
 package.deb: $(PKGFILE)
 
+# Upload package to repository
+
+upload: $(PKGFILE)
+	scp $^ $(REPOSITORY)
+
 # Download prebuilt package
 
 download_prebuilt: $(PKGFILE).downloaded
