--- a/extensions/libmariadb/Makefile
+++ b/extensions/libmariadb/Makefile
@@ -50,6 +50,11 @@ $(PKGDIR):
 
 package.deb: $(PKGFILE)
 
+# Upload package to repository
+
+upload: $(PKGFILE)
+	scp $^ $(REPOSITORY)
+
 # Download prebuilt package
 
 download_prebuilt: $(PKGFILE).downloaded
