--- a/extensions/openvpn/Makefile
+++ b/extensions/openvpn/Makefile
@@ -84,6 +84,11 @@ $(PKGDIR): build.done
 
 package.deb: $(PKGFILE)
 
+# Upload package to repository
+
+upload: $(PKGFILE)
+	scp $^ $(REPOSITORY)
+
 # Download prebuilt package
 
 download_prebuilt: $(PKGFILE).downloaded
