Use $(HOME)/muntsos for the default value of MUNTSOS
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20475 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/ada/freemodbus/rtu-automation-phat/Makefile
+++ b/examples/ada/freemodbus/rtu-automation-phat/Makefile
@@ -1,4 +1,4 @@
-# Copyright (C)2019-2021, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2019-2022, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -20,7 +20,7 @@
 
 # Override the following macro to build out of tree
 
-MUNTSOS		?= ../../../..
+MUNTSOS		?= $(HOME)/muntsos
 
 MODBUS_SRC	:= $(MUNTSOS)/examples/ada/freemodbus
 
