--- a/examples/c++/programs/Makefile
+++ b/examples/c++/programs/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building C++ example programs for MuntsOS
 
-# Copyright (C)2016-2021, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2016-2022, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -22,7 +22,7 @@
 
 # Override the following macro to build out of tree
 
-MUNTSOS		?= ../../..
+MUNTSOS		?= $(HOME)/muntsos
 LIBSIMPLEIO	?= /usr/local/share/libsimpleio
 
 CXX_SRC		?= $(MUNTSOS)/examples/c++
