Require package muntsos-common to be installed.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20478 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libsimpleio/control
+++ b/toolchain/libsimpleio/control
@@ -5,6 +5,6 @@ Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
 Description: Linux Simple I/O library for @@TARGET@@
-Depends: munts-libsimpleio
+Depends: munts-libsimpleio, muntsos-common
 Conflicts: @@NAME@@-crosstool
 Replaces: @@NAME@@-crosstool
