Changed the default value for MUNTSOS to /usr/local/share/muntsos
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20482 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/doc/.blinky/Makefile.freepascal
+++ b/doc/.blinky/Makefile.freepascal
@@ -1,7 +1,7 @@
 .PHONY: default clean
 
 LIBSIMPLEIO	?= /usr/local/share/libsimpleio
-MUNTSOS		?= $(HOME)/muntsos
+MUNTSOS		?= /usr/local/share/muntsos
 
 include $(LIBSIMPLEIO)/freepascal/include/freepascal.mk
 include $(LIBSIMPLEIO)/freepascal/include/libsimpleio.mk
