Cleaned up and unified Makefile layouts
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20494 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/ada/programs/Makefile
+++ b/examples/ada/programs/Makefile
@@ -26,14 +26,14 @@ LIBSIMPLEIO	?= /usr/local/share/libsimpleio
 MUNTSOS		?= /usr/local/share/muntsos
 
 include $(LIBSIMPLEIO)/ada/include/ada.mk
-
-PROGRAMS	:= $(shell for F in *.adb ; do echo `basename $$F .adb` ; done)
+include $(LIBSIMPLEIO)/ada/include/libsimpleio.mk
 
 # Compile programs
 
-default: $(PROGRAMS)
+default:
+	for F in *.adb ; do $(MAKE) `basename $$F .adb` ; done
 
 # Remove working files
 
 clean: ada_mk_clean
-	rm -f $(PROGRAMS)
+	for F in *.adb ; do rm -f `basename $$F .adb` ; done
