More makefile unification
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20495 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/c++/programs/Makefile
+++ b/examples/c++/programs/Makefile
@@ -1,4 +1,4 @@
-# Makefile for building C++ example programs for MuntsOS
+# Makefile for building C++ programs for MuntsOS Embedded Linux
 
 # Copyright (C)2016-2022, Philip Munts, President, Munts AM Corp.
 #
@@ -20,18 +20,17 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-# Override the following macro to build out of tree
+.PHONY: default clean
 
-MUNTSOS		?= $(HOME)/muntsos
 LIBSIMPLEIO	?= /usr/local/share/libsimpleio
-
-CXX_SRC		?= $(MUNTSOS)/examples/c++
-CXXFLAGS	+= -I$(CXX_SRC)/lib
+MUNTSOS		?= /usr/local/share/muntsos
 
 include $(LIBSIMPLEIO)/c++/include/c++.mk
 include $(LIBSIMPLEIO)/c++/include/libsimpleio.mk
 
-# Compile the test programs
+CXXFLAGS	+= -I$(MUNTSOS)/examples/c++/lib
+
+# Compile programs
 
 default:
 	for F in *.cpp ; do $(MAKE) `basename $$F .cpp` ; done
@@ -40,7 +39,3 @@ default:
 
 clean: cxx_mk_clean
 	for F in *.cpp ; do rm -f `basename $$F .cpp` ; done
-
-reallyclean: clean cxx_mk_reallyclean
-
-distclean: reallyclean cxx_mk_distclean
