Upgraded the Raspberry Pi kernel to 5.15.76.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20527 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi1Gadget.config
+++ b/bootkernel/kernel/RaspberryPi1Gadget.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 5.15.65 Kernel Configuration
+# Linux/arm 5.15.76 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="arm-linux-gnueabihf-gcc (crosstool-NG 1.24.0) 8.3.0"
 CONFIG_CC_IS_GCC=y
@@ -360,7 +360,10 @@ CONFIG_USE_OF=y
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
 # CONFIG_ARM_APPENDED_DTB is not set
-CONFIG_CMDLINE="console=tty1 OPTIONS=0x012C"
+CONFIG_CMDLINE=""
+CONFIG_CMDLINE_FROM_BOOTLOADER=y
+# CONFIG_CMDLINE_EXTEND is not set
+# CONFIG_CMDLINE_FORCE is not set
 # CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
 CONFIG_AUTO_ZRELADDR=y
@@ -3925,6 +3928,8 @@ CONFIG_BOOT_PRINTK_DELAY=y
 CONFIG_SYMBOLIC_ERRNAME=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
 # end of printk and dmesg options
+
+CONFIG_AS_HAS_NON_CONST_LEB128=y
 
 #
 # Compile-time checks and compiler options
