--- a/bootkernel/kernel/RaspberryPi3Gadget.config
+++ b/bootkernel/kernel/RaspberryPi3Gadget.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.15.65 Kernel Configuration
+# Linux/arm64 5.15.76 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (crosstool-NG 1.25.0) 10.3.0"
 CONFIG_CC_IS_GCC=y
@@ -310,11 +310,13 @@ CONFIG_ARM64_ERRATUM_1165522=y
 CONFIG_ARM64_ERRATUM_1319367=y
 CONFIG_ARM64_ERRATUM_1530923=y
 CONFIG_ARM64_WORKAROUND_REPEAT_TLBI=y
+CONFIG_ARM64_ERRATUM_2441007=y
 CONFIG_ARM64_ERRATUM_1286807=y
 CONFIG_ARM64_ERRATUM_1463225=y
 CONFIG_ARM64_ERRATUM_1542419=y
 CONFIG_ARM64_ERRATUM_1508412=y
 CONFIG_ARM64_ERRATUM_2441009=y
+CONFIG_ARM64_ERRATUM_2457168=y
 # CONFIG_CAVIUM_ERRATUM_22375 is not set
 # CONFIG_CAVIUM_ERRATUM_23154 is not set
 # CONFIG_CAVIUM_ERRATUM_27456 is not set
@@ -407,7 +409,6 @@ CONFIG_ARM64_TLB_RANGE=y
 #
 CONFIG_AS_HAS_ARMV8_5=y
 CONFIG_ARM64_BTI=y
-CONFIG_ARM64_BTI_KERNEL=y
 CONFIG_CC_HAS_BRANCH_PROT_PAC_RET_BTI=y
 CONFIG_ARM64_E0PD=y
 CONFIG_ARCH_RANDOM=y
@@ -433,7 +434,7 @@ CONFIG_STACKPROTECTOR_PER_TASK=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="console=tty1 OPTIONS=0x012C"
+CONFIG_CMDLINE=""
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
@@ -4165,6 +4166,8 @@ CONFIG_BOOT_PRINTK_DELAY=y
 CONFIG_SYMBOLIC_ERRNAME=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
 # end of printk and dmesg options
+
+CONFIG_AS_HAS_NON_CONST_LEB128=y
 
 #
 # Compile-time checks and compiler options
