Uncommented BeagleBone again.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20531 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -115,7 +115,7 @@ build: $(KERNEL_WORK)/build.done
 # Refresh kernel configuration files
 
 allconfig:
-	#$(MAKE) config reallyclean BOARDNAME=BeagleBone
+	$(MAKE) config reallyclean BOARDNAME=BeagleBone
 	$(MAKE) config reallyclean BOARDNAME=RaspberryPi1
 	$(MAKE) config reallyclean BOARDNAME=RaspberryPi1Gadget
 	$(MAKE) config reallyclean BOARDNAME=RaspberryPi2
