Upgraded the Raspberry Pi kernel to 5.15.80.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20533 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi4.config
+++ b/bootkernel/kernel/RaspberryPi4.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.15.76 Kernel Configuration
+# Linux/arm64 5.15.80 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (crosstool-NG 1.25.0) 10.3.0"
 CONFIG_CC_IS_GCC=y
@@ -3351,6 +3351,7 @@ CONFIG_MMC_SDHCI_IPROC=y
 # CONFIG_MMC_MTK is not set
 # CONFIG_MMC_SDHCI_XENON is not set
 # CONFIG_MMC_SDHCI_OMAP is not set
+# CONFIG_MMC_SDHCI_AM654 is not set
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
