Changed the default value for MUNTSOS to /usr/local/share/muntsos
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20539 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/LPC1114/Makefile
+++ b/extensions/LPC1114/Makefile
@@ -22,7 +22,7 @@
 
 ARMSRC		?= $(HOME)/arm-mcu
 BOARDNAME	?= UNDEFINED
-MUNTSOS		?= ../..
+MUNTSOS		?= /usr/local/share/muntsos
 RASPBERRYPI_LPC1114_SRC	?= $(HOME)/rpi-mcu/expansion/LPC1114/src
 
 include $(MUNTSOS)/include/$(BOARDNAME).mk
