Ensure absolute path for the default value of MUNTSOS
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20546 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -22,8 +22,8 @@
 
 .PHONY: default src config menuconfig dtbs modules initramfs build allconfig clean reallyclean distclean
 
-MUNTSOS		?= ../..
 BOARDNAME	?= UNDEFINED
+MUNTSOS		?= $(shell pwd)/../..
 MAKEJOBS	?= -j 2
 
 include $(MUNTSOS)/include/$(BOARDNAME).mk
