--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -20,8 +20,8 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-MUNTSOS			?= ../..
 BOARDNAME		?= UNDEFINED
+MUNTSOS			?= $(shell pwd)/../..
 MAKEJOBS		?= -j 2
 
 include $(MUNTSOS)/include/$(BOARDNAME).mk
