Include examples.mk
Needed for building with gnatmake instead of gprbuild.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20565 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/ada/programs/Makefile
+++ b/examples/ada/programs/Makefile
@@ -27,6 +27,7 @@ MUNTSOS		?= /usr/local/share/muntsos
 
 include $(LIBSIMPLEIO)/ada/include/ada.mk
 include $(LIBSIMPLEIO)/ada/include/libsimpleio.mk
+include $(MUNTSOS)/examples/ada/include/examples.mk
 
 # Compile programs
 
