Still need to remove obj/
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20644 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libsimpleio/Makefile
+++ b/toolchain/libsimpleio/Makefile
@@ -118,6 +118,6 @@ clean:
 	-rm -rf $(PKGDIR) $(PKGFILE)
 
 reallyclean: clean
-	-rm -rf compile.done libsimpleio libsimpleio.a libsimpleio.lib libsimpleio.obj libsimpleio.so
+	-rm -rf compile.done libsimpleio libsimpleio.a libsimpleio.lib libsimpleio.obj libsimpleio.so obj
 
 distclean: reallyclean
